--- a/benchmark/distribution.asciidoc
+++ b/benchmark/distribution.asciidoc
@@ -158,8 +158,9 @@ Distribution of Russian names on generated phonetic codes. X-axis represents max
 Total encoded: *254755* names
 
 .link:https://imgur.com/XZBUjuH[russian_names_distribution.png]
-image::https://i.imgur.com/XZBUjuH.png[]
+image::https://i.imgur.com/XZBUjuH.png[800,800]
 
+{empty} +
 [width="80%",options="header"]
 .Number of produced phonetic codes
 |=========================================================
@@ -217,12 +218,10 @@ Distribution of Russian orthography dictionary on generated phonetic codes. X-ax
 
 Total encoded: *172899* words
 
-.link:https://raw.githubusercontent.com/papahigh/elasticsearch-russian-phonetics/master/benchmark/assets/russian_orthography/plot.png[russian_orthography_distribution.png]
-image::https://raw.githubusercontent.com/papahigh/elasticsearch-russian-phonetics/master/benchmark/assets/russian_orthography/plot.png[]
-
 .link:https://imgur.com/bhmjjJb[russian_orthography_distribution.png]
-image::https://i.imgur.com/bhmjjJb.png[]
+image::https://i.imgur.com/bhmjjJb.png[800,800]
 
+{empty} +
 [options="header"]
 .Number of produced phonetic codes
 |=========================================================
@@ -281,8 +280,9 @@ Distribution of Russian morphology dictionary on generated phonetic codes. X-axi
 Total encoded: *2380519* words (173975 unique russian words and their morphological forms)
 
 .link:https://imgur.com/ClCGBDS[russian_morphology_distribution.png]
-image::https://i.imgur.com/ClCGBDS.png[]
+image::https://i.imgur.com/ClCGBDS.png[800,800]
 
+{empty} +
 [options="header"]
 .Number of produced phonetic codes
 |=========================================================
