--- a/encoder/README.asciidoc
+++ b/encoder/README.asciidoc
@@ -77,20 +77,17 @@ behaviour and performance under certain options value.
 ----
 * `*э*`, `*е*`, `*ы*`, `*и*` or (`*а*`, `*я*` if after `*ж*`, `*ц*`, `*ш*`, `*ч*`, `*щ*`)  followed by `*э*`, `*е*`, `*ы*`, `*и*` → `*2*`
 +
-[source,intent=0]
-----
-хокк[ии]ст ⟷ хок[еи]ст
-ч[ии]нка ⟷ ч[аи]нка
-ч[ии]нка ⟷ ч[яи]нка
-н[ии]стовый ⟷ н[еи]стовый
-ассоц[ии]ровать ⟷ ассоц[еи]ровать
-ассоц[ии]ровать ⟷ ассоц[ыи]ровать
-пер[ии]начить ⟷ пер[еи]начить
-нукл[ии]новый ⟷ нукл[еи]новый
-пац[ие]нт ⟷ пац[ые]нт
-ит[ы]ровский ⟷ ит[эе]ровский // ИТР (инженерно­технический работник)
-ит[э]ровский ⟷ ит[эе]ровский
-----
+** хокк[ии]ст ⟷ хок[еи]ст
+** ч[ии]нка ⟷ ч[аи]нка
+** ч[ии]нка ⟷ ч[яи]нка
+** н[ии]стовый ⟷ н[еи]стовый
+** ассоц[ии]ровать ⟷ ассоц[еи]ровать
+** ассоц[ии]ровать ⟷ ассоц[ыи]ровать
+** пер[ии]начить ⟷ пер[еи]начить
+** нукл[ии]новый ⟷ нукл[еи]новый
+** пац[ие]нт ⟷ пац[ые]нт
+** ит[ы]ровский ⟷ ит[эе]ровский footnoteref:[itr,И.Т.Р. - инженерно­технический работник.]
+** ит[э]ровский ⟷ ит[эе]ровский footnoteref:[itr]
 
 . drop `*й*`, `*и*`, `*е*`, `*ы*` if before vowel and not dropped already
 
@@ -307,12 +304,11 @@ behaviour and performance under certain options value.
 ----
 * if word ends with double voiced consonants then both transform to unvoiced:
 +
-[source,intent=0]
-----
+____
 вдры[зг] → вдры[ск]
 ви[зг] → ви[ск]
 гро[здь] → гро[сть]
-----
+____
 * voiced consonant transforms to unvoiced if followed by unvoiced:
 +
 [source,intent=0]
