--- a/encoder/README.asciidoc
+++ b/encoder/README.asciidoc
@@ -77,17 +77,49 @@ behaviour and performance under certain options value.
 ----
 * `*э*`, `*е*`, `*ы*`, `*и*` or (`*а*`, `*я*` if after `*ж*`, `*ц*`, `*ш*`, `*ч*`, `*щ*`)  followed by `*э*`, `*е*`, `*ы*`, `*и*` → `*2*`
 +
-** хокк[ии]ст ⟷ хок[еи]ст
-** ч[ии]нка ⟷ ч[аи]нка
-** ч[ии]нка ⟷ ч[яи]нка
-** н[ии]стовый ⟷ н[еи]стовый
-** ассоц[ии]ровать ⟷ ассоц[еи]ровать
-** ассоц[ии]ровать ⟷ ассоц[ыи]ровать
-** пер[ии]начить ⟷ пер[еи]начить
-** нукл[ии]новый ⟷ нукл[еи]новый
-** пац[ие]нт ⟷ пац[ые]нт
-** ит[ы]ровский ⟷ ит[эе]ровский footnoteref:[itr,И.Т.Р. - инженерно­технический работник.]
-** ит[э]ровский ⟷ ит[эе]ровский footnoteref:[itr]
+____
+хокк[ии]ст ⟷ хок[еи]ст
+____
++
+____
+ч[ии]нка ⟷ ч[аи]нка
+____
++
+____
+ч[ии]нка ⟷ ч[яи]нка
+____
++
+____
+н[ии]стовый ⟷ н[еи]стовый
+____
++
+____
+ассоц[ии]ровать ⟷ ассоц[еи]ровать
+____
++
+____
+ассоц[ии]ровать ⟷ ассоц[ыи]ровать
+____
++
+____
+пер[ии]начить ⟷ пер[еи]начить
+____
++
+____
+нукл[ии]новый ⟷ нукл[еи]новый
+____
++
+____
+пац[ие]нт ⟷ пац[ые]нт
+____
++
+____
+ит[ы]ровский ⟷ ит[эе]ровский footnoteref:[itr,И.Т.Р. - инженерно­технический работник.]
+____
++
+____
+ит[э]ровский ⟷ ит[эе]ровский footnoteref:[itr]
+____
 
 . drop `*й*`, `*и*`, `*е*`, `*ы*` if before vowel and not dropped already
 
@@ -306,7 +338,11 @@ behaviour and performance under certain options value.
 +
 ____
 вдры[зг] → вдры[ск]
+____
+____
 ви[зг] → ви[ск]
+____
+____
 гро[здь] → гро[сть]
 ____
 * voiced consonant transforms to unvoiced if followed by unvoiced:
