--- a/encoder/README.asciidoc
+++ b/encoder/README.asciidoc
@@ -107,6 +107,8 @@ ____
 +
 ____
 нукл[ии]новый ⟷ нукл[еи]новый
++
+нукл[ии]новый ⟷ нукл[еи]новый
 ____
 +
 ____
@@ -114,7 +116,7 @@ ____
 ____
 +
 ____
-ит[ы]ровский ⟷ ит[эе]ровский footnoteref:[itr,И.Т.Р. - инженерно­технический работник.]
+ит[ы]ровский ⟷ ит[эе]ровский footnoteref:[itr,ИТР - инженерно­технический работник.]
 ____
 +
 ____
