--- a/encoder/README.asciidoc
+++ b/encoder/README.asciidoc
@@ -115,176 +115,176 @@ ____
 . `*г*` transforms to `*в*` in `*ого*`, `*его*` at the end of the word
 
 . reduce the following sequences of consonants:
-* `*вств*` → `*ств*`
-+
+
+`*вств*` → `*ств*`
 ____
 здра[вств]уй → здра[ств]уй
 ____
-* `*гк*` → `*хк*`
-+
+
+`*гк*` → `*хк*`
 ____
 мя[гк]ий → мя[хк]ий
 ____
-* `*дч*`, `*тч*` → `*ч*`
-+
+
+`*дч*`, `*тч*` → `*ч*`
 ____
 прохо[дч]ик → прохо[ч]ик
 ____
-* `*дц*`, `*дс*`, `*тц*`, `*дц*`, `*тс*`, `*тьс*` → `*ц*`
-+
+
+`*дц*`, `*дс*`, `*тц*`, `*дц*`, `*тс*`, `*тьс*` → `*ц*`
 ____
 инохо[дц]ы → инохо[ц]ы
 ____
-* `*дск*`, `*тск*` → `*цк*`
-+
+
+`*дск*`, `*тск*` → `*цк*`
 ____
 кислово[дск] → кислово[цк]
 ____
-* `*жк*` → `*шк*`
-+
+
+`*жк*` → `*шк*`
 ____
 впереме[жк]у → впереме[шк]у
 ____
-* `*зс*` → `*с*`
-+
+
+`*зс*` → `*с*`
 ____
 ра[зс]ылать → ра[с]ылать
 ____
-* `*зч*`, `*сч*`, `*сщ*`, `*шч*`, `*жч*`, `*здч*`, `*стч*`, `*тщ*` → `*щ*`
-+
+
+`*зч*`, `*сч*`, `*сщ*`, `*шч*`, `*жч*`, `*здч*`, `*стч*`, `*тщ*` → `*щ*`
 ____
 перебе[жч]ик → перебе[щ]ик
 ____
-* `*здц*`, `*стц*` → `*сц*`
-+
+
+`*здц*`, `*стц*` → `*сц*`
 ____
 кре[стц]овый → кре[сц]овый
 ____
-* `*здн*` → `*зн*`
-+
+
+`*здн*` → `*зн*`
 ____
 звё[здн]ый → звё[зн]ый
 ____
-* `*зтг*`, `*стг*` → `*зг*`
-+
+
+`*зтг*`, `*стг*` → `*зг*`
 ____
 бю[стг]алтер → бю[зг]алтер
 ____
-* `*лнц*`, `*ндц*` → `*нц*`
-+
+
+`*лнц*`, `*ндц*` → `*нц*`
 ____
 голла[ндц]ы → голла[нц]ы
 ____
-* `*ндк*` → `*нк*`
-+
+
+`*ндк*` → `*нк*`
 ____
 ирла[ндк]а → ирла[нк]а
 ____
-* `*ндск*` → `*нск*`
-+
+
+`*ндск*` → `*нск*`
 ____
 голла[ндск]ий → голла[нск]ий
 ____
-* `*ндш*`, `*нтш*` → `*нш*`
-+
+
+`*ндш*`, `*нтш*` → `*нш*`
 ____
 ла[ндш]афт → ла[нш]афт
 ____
-* `*нтг*` → `*нг*`
-+
+
+`*нтг*` → `*нг*`
 ____
 ре[нтг]ен → ре[нг]ен
 ____
-* `*нтк*` → `*нк*`
-+
+
+`*нтк*` → `*нк*`
 ____
 студе[нтк]а → студе[нк]а
 ____
-* `*нтск*` → `*нск*`
-+
+
+`*нтск*` → `*нск*`
 ____
 гига[нтск]ий → гига[нск]ий
 ____
-* `*нтств*` → `*нств*`
-+
+
+`*нтств*` → `*нств*`
 ____
 аге[нтств]о → аге[нств]о
 ____
-* `*рдц*` → `*рц*`
-+
+
+`*рдц*` → `*рц*`
 ____
 се[рдц]е → се[рц]е
 ____
-* `*рдч*` → `*рч*`
-+
+
+`*рдч*` → `*рч*`
 ____
 се[рдч]ишко → се[рч]ишко
 ____
-* `*сж*`, `*зж*` → `*ж*`
-+
+
+`*сж*`, `*зж*` → `*ж*`
 ____
 уе[зж]ать → уе[ж]ать
 ____
-* `*сз*` → `*з*`
-+
+
+`*сз*` → `*з*`
 ____
 бю[сзг]алтер → бю[зг]алтер
 ____
-* `*сш*`, `*зш*` → `*ш*`
-+
+
+`*сш*`, `*зш*` → `*ш*`
 ____
 вы[сш]ий → вы[ш]ий
 ____
-* `*стк*`, `*сдк*`, `*зтк*`, `*здк*` → `*ск*`
-+
+
+`*стк*`, `*сдк*`, `*зтк*`, `*здк*` → `*ск*`
 ____
 машини[стк]а → машини[ск]а
 ____
-* `*стг*`, `*сдг*`, `*зтг*`, `*здг*` → `*зг*`
-+
+
+`*стг*`, `*сдг*`, `*зтг*`, `*здг*` → `*зг*`
 ____
 бю[стг]алтер → бю[зг]алтер
 ____
-* `*стл*` → `*сл*`
-+
+
+`*стл*` → `*сл*`
 ____
 сча[стл]ивый → сча[сл]ивый
 ____
-* `*стн*` → `*сн*`
-+
+
+`*стн*` → `*сн*`
 ____
 ле[стн]ица → ле[сн]ица
 ____
-* `*стск*` → `*ск*`
-+
+
+`*стск*` → `*ск*`
 ____
 маркси[стск]ий → маркси[ск]ий
 ____
-* `*хг*` → `*г*`
-+
+
+`*хг*` → `*г*`
 ____
 бу[хг]алтер → бу[г]алтер
 ____
-* `*чн*` → `*шн*`
-+
+
+`*чн*` → `*шн*`
 ____
 коне[чн]о → коне[шн]о
 ____
-* `*чт*` → `*шт*`
-+
+
+`*чт*` → `*шт*`
 ____
 [чт]о → [шт]о
 ____
 
 . apply voicing rules for paired consonants `*б*`-`*п*`, `*з*`-`*с*`, `*д*`-`*т*`, `*в*`-`*ф*`, `*г*`-`*к*`, `*ж*`-`*ш*`:
-* voiced consonant transforms to unvoiced at the end of word:
+.. voiced consonant transforms to unvoiced at the end of word:
 +
 ____
 моти[в] → моти[ф]
 
 а[б]сур[д] → а[п]сур[т]
 ____
-* if word ends with double voiced consonants then both transform to unvoiced:
+.. if word ends with double voiced consonants then both transform to unvoiced:
 +
 ____
 вдры[зг] → вдры[ск]
@@ -293,15 +293,16 @@ ____
 
 гро[здь] → гро[сть]
 ____
-* voiced consonant transforms to unvoiced if followed by unvoiced:
+.. voiced consonant transforms to unvoiced if followed by unvoiced:
 +
 ____
 а[вт]омат → а[фт]омат
 ____
-* unvoiced consonant transforms to voiced if followed by voiced, except `*в*`:
+.. unvoiced consonant transforms to voiced if followed by voiced, except `*в*`:
 +
 ____
 моло[тьб]а → моло[дьб]а
+
 чувс[тв]о → чувс[тв]о
 ____
 
