--- a/encoder/README.asciidoc
+++ b/encoder/README.asciidoc
@@ -115,176 +115,209 @@ ____
 . `*г*` transforms to `*в*` in `*ого*`, `*его*` at the end of the word
 
 . reduce the following sequences of consonants:
-
++
 `*вств*` → `*ств*`
++
 ____
 здра[вств]уй → здра[ств]уй
 ____
-
++
 `*гк*` → `*хк*`
++
 ____
 мя[гк]ий → мя[хк]ий
 ____
-
++
 `*дч*`, `*тч*` → `*ч*`
++
 ____
 прохо[дч]ик → прохо[ч]ик
 ____
-
++
 `*дц*`, `*дс*`, `*тц*`, `*дц*`, `*тс*`, `*тьс*` → `*ц*`
++
 ____
 инохо[дц]ы → инохо[ц]ы
 ____
-
++
 `*дск*`, `*тск*` → `*цк*`
++
 ____
 кислово[дск] → кислово[цк]
 ____
-
++
 `*жк*` → `*шк*`
++
 ____
 впереме[жк]у → впереме[шк]у
 ____
-
++
 `*зс*` → `*с*`
++
 ____
 ра[зс]ылать → ра[с]ылать
 ____
-
++
 `*зч*`, `*сч*`, `*сщ*`, `*шч*`, `*жч*`, `*здч*`, `*стч*`, `*тщ*` → `*щ*`
++
 ____
 перебе[жч]ик → перебе[щ]ик
 ____
-
++
 `*здц*`, `*стц*` → `*сц*`
++
 ____
 кре[стц]овый → кре[сц]овый
 ____
-
++
 `*здн*` → `*зн*`
++
 ____
 звё[здн]ый → звё[зн]ый
 ____
-
++
 `*зтг*`, `*стг*` → `*зг*`
++
 ____
 бю[стг]алтер → бю[зг]алтер
 ____
-
++
 `*лнц*`, `*ндц*` → `*нц*`
++
 ____
 голла[ндц]ы → голла[нц]ы
 ____
-
++
 `*ндк*` → `*нк*`
++
 ____
 ирла[ндк]а → ирла[нк]а
 ____
-
++
 `*ндск*` → `*нск*`
++
 ____
 голла[ндск]ий → голла[нск]ий
 ____
-
++
 `*ндш*`, `*нтш*` → `*нш*`
++
 ____
 ла[ндш]афт → ла[нш]афт
 ____
-
++
 `*нтг*` → `*нг*`
++
 ____
 ре[нтг]ен → ре[нг]ен
 ____
-
++
 `*нтк*` → `*нк*`
++
 ____
 студе[нтк]а → студе[нк]а
 ____
-
++
 `*нтск*` → `*нск*`
++
 ____
 гига[нтск]ий → гига[нск]ий
 ____
-
++
 `*нтств*` → `*нств*`
++
 ____
 аге[нтств]о → аге[нств]о
 ____
-
++
 `*рдц*` → `*рц*`
++
 ____
 се[рдц]е → се[рц]е
 ____
-
++
 `*рдч*` → `*рч*`
++
 ____
 се[рдч]ишко → се[рч]ишко
 ____
-
++
 `*сж*`, `*зж*` → `*ж*`
++
 ____
 уе[зж]ать → уе[ж]ать
 ____
-
++
 `*сз*` → `*з*`
++
 ____
 бю[сзг]алтер → бю[зг]алтер
 ____
-
++
 `*сш*`, `*зш*` → `*ш*`
++
 ____
 вы[сш]ий → вы[ш]ий
 ____
-
++
 `*стк*`, `*сдк*`, `*зтк*`, `*здк*` → `*ск*`
++
 ____
 машини[стк]а → машини[ск]а
 ____
-
++
 `*стг*`, `*сдг*`, `*зтг*`, `*здг*` → `*зг*`
++
 ____
 бю[стг]алтер → бю[зг]алтер
 ____
-
++
 `*стл*` → `*сл*`
++
 ____
 сча[стл]ивый → сча[сл]ивый
 ____
-
++
 `*стн*` → `*сн*`
++
 ____
 ле[стн]ица → ле[сн]ица
 ____
-
++
 `*стск*` → `*ск*`
++
 ____
 маркси[стск]ий → маркси[ск]ий
 ____
-
++
 `*хг*` → `*г*`
++
 ____
 бу[хг]алтер → бу[г]алтер
 ____
-
++
 `*чн*` → `*шн*`
++
 ____
 коне[чн]о → коне[шн]о
 ____
-
++
 `*чт*` → `*шт*`
++
 ____
 [чт]о → [шт]о
 ____
 
 . apply voicing rules for paired consonants `*б*`-`*п*`, `*з*`-`*с*`, `*д*`-`*т*`, `*в*`-`*ф*`, `*г*`-`*к*`, `*ж*`-`*ш*`:
-.. voiced consonant transforms to unvoiced at the end of word:
++
+. voiced consonant transforms to unvoiced at the end of word:
 +
 ____
 моти[в] → моти[ф]
 
 а[б]сур[д] → а[п]сур[т]
 ____
-.. if word ends with double voiced consonants then both transform to unvoiced:
+. if word ends with double voiced consonants then both transform to unvoiced:
 +
 ____
 вдры[зг] → вдры[ск]
