--- a/encoder/README.asciidoc
+++ b/encoder/README.asciidoc
@@ -299,13 +299,13 @@ ____
 `*чн*` → `*шн*`
 +
 ____
-коне[чн]о → коне[шн]о
+коне*чн*о → коне*шн*о
 ____
 +
 `*чт*` → `*шт*`
 +
 ____
-[чт]о → [шт]о
+*чт*о → *шт*о
 ____
 
 . apply voicing rules for paired consonants `*б*`-`*п*`, `*з*`-`*с*`, `*д*`-`*т*`, `*в*`-`*ф*`, `*г*`-`*к*`, `*ж*`-`*ш*`:
