--- a/encoder/README.asciidoc
+++ b/encoder/README.asciidoc
@@ -70,37 +70,37 @@ behaviour and performance under certain options value.
 +
 [source,intent=0]
 ----
-в[оо]бражение ⟷ в[оа]бражение
-кл[аа]ка ⟷ кл[оа]ка
-к[оо]лиция ⟷ к[оа]лиция
-п[оо]бещать ⟷ п[оа]бещать
+в**оо**бражение ⟷ в**оа**бражение
+кл**аа**ка ⟷ кл**оа**ка
+к**оо**лиция ⟷ к**оа**лиция
+п**оо**бещать ⟷ п**оа**бещать
 ----
 * `*э*`, `*е*`, `*ы*`, `*и*` or (`*а*`, `*я*` if after `*ж*`, `*ц*`, `*ш*`, `*ч*`, `*щ*`)  followed by `*э*`, `*е*`, `*ы*`, `*и*` → `*2*`
 +
 ____
-хокк[ии]ст ⟷ хок[еи]ст
+хокк**ии**ст ⟷ хок**еи**ст
 
-ч[ии]нка ⟷ ч[аи]нка
+ч**ии**нка ⟷ ч**аи**нка
 
-ч[ии]нка ⟷ ч[яи]нка
+ч**ии**нка ⟷ ч**яи**нка
 
-н[ии]стовый ⟷ н[еи]стовый
+н**ии**стовый ⟷ н**еи**стовый
 
-ассоц[ии]ровать ⟷ ассоц[еи]ровать
+ассоц**ии**ровать ⟷ ассоц**еи**ровать
 
-ассоц[ии]ровать ⟷ ассоц[ыи]ровать
+ассоц**ии**ровать ⟷ ассоц**ыи**ровать
 
-пер[ии]начить ⟷ пер[еи]начить
+пер**ии**начить ⟷ пер**еи**начить
 
-нукл[ии]новый ⟷ нукл[еи]новый
+нукл**ии**новый ⟷ нукл**еи**новый
 
-нукл[ии]новый ⟷ нукл[еи]новый
+нукл**ии**новый ⟷ нукл**еи**новый
 
-пац[ие]нт ⟷ пац[ые]нт
+пац**ие**нт ⟷ пац**ые**нт
 
-ит[ы]ровский ⟷ ит[эе]ровский footnoteref:[itr,ИТР - инженерно­технический работник.]
+ит**ы**ровский ⟷ ит**эе**ровский footnoteref:[itr,ИТР - инженерно­технический работник.]
 
-ит[э]ровский ⟷ ит[эе]ровский footnoteref:[itr]
+ит**э**ровский ⟷ ит**эе**ровский footnoteref:[itr]
 ____
 
 . drop `*й*`, `*и*`, `*е*`, `*ы*` if before vowel and not dropped already
@@ -119,190 +119,190 @@ ____
 `*вств*` → `*ств*`
 +
 ____
-здра[вств]уй → здра[ств]уй
+здра**вств**уй → здра**ств**уй
 ____
 +
 `*гк*` → `*хк*`
 +
 ____
-мя[гк]ий → мя[хк]ий
+мя**гк**ий → мя**хк**ий
 ____
 +
 `*дч*`, `*тч*` → `*ч*`
 +
 ____
-прохо[дч]ик → прохо[ч]ик
+прохо**дч**ик → прохо**ч**ик
 ____
 +
 `*дц*`, `*дс*`, `*тц*`, `*дц*`, `*тс*`, `*тьс*` → `*ц*`
 +
 ____
-инохо[дц]ы → инохо[ц]ы
+инохо**дц**ы → инохо**ц**ы
 ____
 +
 `*дск*`, `*тск*` → `*цк*`
 +
 ____
-кислово[дск] → кислово[цк]
+кислово**дск** → кислово**цк**
 ____
 +
 `*жк*` → `*шк*`
 +
 ____
-впереме[жк]у → впереме[шк]у
+впереме**жк**у → впереме**шк**у
 ____
 +
 `*зс*` → `*с*`
 +
 ____
-ра[зс]ылать → ра[с]ылать
+ра**зс**ылать → ра**с**ылать
 ____
 +
 `*зч*`, `*сч*`, `*сщ*`, `*шч*`, `*жч*`, `*здч*`, `*стч*`, `*тщ*` → `*щ*`
 +
 ____
-перебе[жч]ик → перебе[щ]ик
+перебе**жч**ик → перебе**щ**ик
 ____
 +
 `*здц*`, `*стц*` → `*сц*`
 +
 ____
-кре[стц]овый → кре[сц]овый
+кре**стц**овый → кре**сц**овый
 ____
 +
 `*здн*` → `*зн*`
 +
 ____
-звё[здн]ый → звё[зн]ый
+звё**здн**ый → звё**зн**ый
 ____
 +
 `*зтг*`, `*стг*` → `*зг*`
 +
 ____
-бю[стг]алтер → бю[зг]алтер
+бю**стг**алтер → бю**зг**алтер
 ____
 +
 `*лнц*`, `*ндц*` → `*нц*`
 +
 ____
-голла[ндц]ы → голла[нц]ы
+голла**ндц**ы → голла**нц**ы
 ____
 +
 `*ндк*` → `*нк*`
 +
 ____
-ирла[ндк]а → ирла[нк]а
+ирла**ндк**а → ирла**нк**а
 ____
 +
 `*ндск*` → `*нск*`
 +
 ____
-голла[ндск]ий → голла[нск]ий
+голла**ндск**ий → голла**нск**ий
 ____
 +
 `*ндш*`, `*нтш*` → `*нш*`
 +
 ____
-ла[ндш]афт → ла[нш]афт
+ла**ндш**афт → ла**нш**афт
 ____
 +
 `*нтг*` → `*нг*`
 +
 ____
-ре[нтг]ен → ре[нг]ен
+ре**нтг**ен → ре**нг**ен
 ____
 +
 `*нтк*` → `*нк*`
 +
 ____
-студе[нтк]а → студе[нк]а
+студе**нтк**а → студе**нк**а
 ____
 +
 `*нтск*` → `*нск*`
 +
 ____
-гига[нтск]ий → гига[нск]ий
+гига**нтск**ий → гига**нск**ий
 ____
 +
 `*нтств*` → `*нств*`
 +
 ____
-аге[нтств]о → аге[нств]о
+аге**нтств**о → аге**нств**о
 ____
 +
 `*рдц*` → `*рц*`
 +
 ____
-се[рдц]е → се[рц]е
+се**рдц**е → се**рц**е
 ____
 +
 `*рдч*` → `*рч*`
 +
 ____
-се[рдч]ишко → се[рч]ишко
+се**рдч**ишко → се**рч**ишко
 ____
 +
 `*сж*`, `*зж*` → `*ж*`
 +
 ____
-уе[зж]ать → уе[ж]ать
+уе**зж**ать → уе**ж**ать
 ____
 +
 `*сз*` → `*з*`
 +
 ____
-бю[сзг]алтер → бю[зг]алтер
+бю**сзг**алтер → бю**зг**алтер
 ____
 +
 `*сш*`, `*зш*` → `*ш*`
 +
 ____
-вы[сш]ий → вы[ш]ий
+вы**сш**ий → вы**ш**ий
 ____
 +
 `*стк*`, `*сдк*`, `*зтк*`, `*здк*` → `*ск*`
 +
 ____
-машини[стк]а → машини[ск]а
+машини**стк**а → машини**ск**а
 ____
 +
 `*стг*`, `*сдг*`, `*зтг*`, `*здг*` → `*зг*`
 +
 ____
-бю[стг]алтер → бю[зг]алтер
+бю**стг**алтер → бю**зг**алтер
 ____
 +
 `*стл*` → `*сл*`
 +
 ____
-сча[стл]ивый → сча[сл]ивый
+сча**стл**ивый → сча**сл**ивый
 ____
 +
 `*стн*` → `*сн*`
 +
 ____
-ле[стн]ица → ле[сн]ица
+ле**стн**ица → ле**сн**ица
 ____
 +
 `*стск*` → `*ск*`
 +
 ____
-маркси[стск]ий → маркси[ск]ий
+маркси**стск**ий → маркси**ск**ий
 ____
 +
 `*хг*` → `*г*`
 +
 ____
-бу[хг]алтер → бу[г]алтер
+бу**хг**алтер → бу**г**алтер
 ____
 +
 `*чн*` → `*шн*`
 +
 ____
-коне*чн*о → коне*шн*о
+коне**чн**о → коне**шн**о
 ____
 +
-`*чт*` → `*шт*`
+`**чт**` → `**шт**`
 +
 ____
 **чт**о → **шт**о
@@ -313,29 +313,29 @@ ____
 . voiced consonant transforms to unvoiced at the end of word:
 +
 ____
-моти[в] → моти[ф]
+моти**в** → моти**ф**
 
-а[б]сур[д] → а[п]сур[т]
+а**б**сур**д** → а**п**сур**т**
 ____
 . if word ends with double voiced consonants then both transform to unvoiced:
 +
 ____
-вдры[зг] → вдры[ск]
+вдры**зг** → вдры**ск**
 
-ви[зг] → ви[ск]
+ви**зг** → ви**ск**
 
-гро[здь] → гро[сть]
+гро**здь** → гро**сть**
 ____
 .. voiced consonant transforms to unvoiced if followed by unvoiced:
 +
 ____
-а[вт]омат → а[фт]омат
+а**вт**омат → а**фт**омат
 ____
 .. unvoiced consonant transforms to voiced if followed by voiced, except `*в*`:
 +
 ____
-моло[тьб]а → моло[дьб]а
+моло**тьб**а → моло**дьб**а
 
-чувс[тв]о → чувс[тв]о
+чувс**тв**о → чувс**тв**о
 ____
 
