--- a/encoder/README.asciidoc
+++ b/encoder/README.asciidoc
@@ -75,16 +75,20 @@ else drop first letter and apply link:#first-vowel-mapping[*rule 3*] for the sec
 . `*я*` after `*б*`, `*в*`, `*г*`, `*д*`, `*з*`, `*к*`, `*л*`, `*м*`, `*н*`, `*п*`, `*р*`, `*с*`, `*т*`, `*ф*` or `*х*` transforms to `*2*`. Otherwise, `*я*` transforms to `*1*`
 
 . reduce sequences of vowels with near-similar sound, in order to keep consistency with link:#rule-2[*rule 2*]
-* `*ао*` `*оа*` `*оо*` `*аа*` → `*1*`
 +
-[source,intent=0]
-----
+`*ао*` `*оа*` `*оо*` `*аа*` → `*1*`
++
+____
 в**оо**бражение ⟷ в**оа**бражение
+
 кл**аа**ка ⟷ кл**оа**ка
+
 к**оо**лиция ⟷ к**оа**лиция
+
 п**оо**бещать ⟷ п**оа**бещать
-----
-* `*э*`, `*е*`, `*ы*`, `*и*` or (`*а*`, `*я*` if after `*ж*`, `*ц*`, `*ш*`, `*ч*`, `*щ*`)  followed by `*э*`, `*е*`, `*ы*`, `*и*` → `*2*`
+____
++
+`*э*`, `*е*`, `*ы*`, `*и*` or (`*а*`, `*я*` if after `*ж*`, `*ц*`, `*ш*`, `*ч*`, `*щ*`)  followed by `*э*`, `*е*`, `*ы*`, `*и*` → `*2*`
 +
 ____
 хокк**ии**ст ⟷ хок**еи**ст
